foo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-foo
  namespace: default
  labels:
    app: server-foo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server-foo
  template:
    metadata:
      labels:
        app: server-foo
    spec:
      containers:
        - name: server-foo-container
          image: us-docker.pkg.dev/google-samples/containers/gke/hello-app:1.0
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: server-foo
spec:
  selector:
    app: server-foo
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
